--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
       "prettier --write"
     ]
   },
-  "packageManager": "yarn@4.4.1"
+  "packageManager": "yarn@4.4.1",
+  "dependencies": {
+    "@backstage/app-defaults": "^1.7.2"
+  }
 }
