--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -20,7 +20,9 @@
     "@backstage/config": "^1.3.6",
     "@backstage/plugin-app-backend": "^0.5.8",
     "@backstage/plugin-auth-backend": "^0.25.6",
+    "@backstage/plugin-auth-backend-module-auth0-provider": "^0.2.9",
     "@backstage/plugin-auth-backend-module-github-provider": "^0.3.9",
+    "@backstage/plugin-auth-backend-module-google-provider": "^0.3.9",
     "@backstage/plugin-auth-backend-module-guest-provider": "^0.2.14",
     "@backstage/plugin-auth-node": "^0.6.9",
     "@backstage/plugin-catalog-backend": "^3.2.0",
