--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -45,6 +45,7 @@
     "@backstage/plugin-search-backend-node": "^1.3.17",
     "@backstage/plugin-signals-backend": "^0.3.10",
     "@backstage/plugin-techdocs-backend": "^2.1.2",
+    "@internal/backstage-plugin-s4w-backend": "workspace:^",
     "app": "link:../app",
     "better-sqlite3": "^12.0.0",
     "node-gyp": "^10.0.0",
