Creating foundation for HTML5 apps integrations with Backstage

--- a/packages/app/examples/testapp/package.json
+++ b/packages/app/examples/testapp/package.json
@@ -8,6 +8,7 @@
         "start": "next start"
     },
     "dependencies": {
+        "backstage-stitch-app-bridge": "file:../../../stitch-app-bridge",
         "next": "latest",
         "react": "latest",
         "react-dom": "latest"
