--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -43,6 +43,7 @@
     "@backstage/theme": "^0.7.0",
     "@backstage/ui": "^0.9.0",
     "@internal/backstage-plugin-apps": "workspace:^",
+    "@internal/backstage-plugin-chord": "workspace:^",
     "@internal/backstage-plugin-s4w": "workspace:^",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
